@@ -5,7 +5,7 @@ Maintainer: Debian CMake Team <pkg-cmake-team@lists.alioth.debian.org>
 Uploaders: Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Felix Geyer <fgeyer@debian.org>,
            Mario Lang <mlang@debian.org>
-Build-Depends: debhelper (>= 9.20141010~),
+Build-Depends: debhelper (>= 9.20160114~),
                dpkg-dev (>= 1.17.14~),
                libarchive-dev (>= 2.8.0),
                libbz2-dev,
@@ -111,17 +111,3 @@ Description: extended documentation in various formats for CMake
  .
  This package provides additional documentation in various formats like HTML or
  plain text.
-
-Package: cmake-dbg
-Architecture: any
-Section: debug
-Priority: extra
-Pre-Depends: dpkg (>= 1.17.5~)
-Depends: cmake (= ${binary:Version}), ${misc:Depends}
-Description: debugging symbols for CMake
- CMake is used to control the software compilation process using simple
- platform and compiler independent configuration files. CMake generates native
- makefiles and workspaces that can be used in the compiler environment of your
- choice.
- .
- This package provides CMake debugging symbols.
