@@ -65,7 +65,10 @@ override_dh_installdocs-indep:
 override_dh_sphinxdoc:
 	dh_sphinxdoc -pcmake-doc
 
+override_dh_strip:
+	dh_strip --dbgsym-migration='cmake-dbg (<< 3.5.0-1~)'
+
 %:
-	dh $@ --with=sphinxdoc --parallel --builddirectory=Build --dbg-package=cmake-dbg
+	dh $@ --with=sphinxdoc --parallel --builddirectory=Build
 
 .PHONY: override_dh_auto_configure override_dh_auto_clean
